# cloud

./: Makefile  pyproject.toml  sam.yml
.github/workflows/: deploy.yml  plan.yml
src/handlers/: get_old_url.py  parse_feed.py
src/utils/: __init__.py  boto3.py  catching_handler.py  create_logger.py  load_environment.py  logging_function.py
terraform/environment/: terraform.tf
terraform/modules/lambda_function/: lambda.tf  logs.tf  output.tf  ssm.tf  terraform.tf
terraform/modules/old_urls/: lambda.tf  locals.tf  sqs.tf  ssm.tf  terraform.tf
terraform/modules/old_urls_function/: iam.tf  lambda.tf  terraform.tf
terraform/modules/root/: dynamodb.tf  iam.tf  lambda.tf  s3.tf  ssm.tf  terraform.tf
